# Solana-Rust

./: README.md  package-lock.json  package.json  tailwind.config.ts
anchor/: Anchor.toml  Cargo.toml
anchor/programs/basic/: Cargo.toml
anchor/programs/basic/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/types/: basic.ts  dead-man-switch.ts  gift-card.ts
src/components/ui/: ui-layout.tsx
